[metadata]
name = dp800tools
author = Davide Olianas
author-email = admin@davideolianas.com
summary = Convert rigol rof/rtf/rdf files to csv and hdf5
license = MIT
description-file =
    README.md
#home-page = http://pypi.python.org/pypi/foobar
requires-python = >=2.7
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    rigolfiletools